Add login page and authentication

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/js/app-admin.js": "/js/app-admin.js"
+    "/js/app-admin.js": "/js/app-admin.js",
+    "/js/app-admin-login.js": "/js/app-admin-login.js"
 }
