--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "lodash": "^4.17.11",
+        "sweetalert2": "^8.8.1",
         "vee-validate": "^2.2.0",
         "vue-meta": "^1.6.0",
         "vue-router": "^3.0.2",
