--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app-admin.js": "/js/app-admin.js",
-    "/js/app-admin-login.js": "/js/app-admin-login.js"
+    "/js/app-admin-login.js": "/js/app-admin-login.js",
+    "/js/pace.min.js": "/js/pace.min.js"
 }
