--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "autoprefixer": "^9.5.1",
+        "blockui": "^1.0.0",
         "cssnano": "^4.1.10",
         "lodash": "^4.17.11",
         "postcss-unprefix": "^2.1.4",
