--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "postcss-unprefix": "^2.1.4",
         "sweetalert2": "^8.8.1",
         "vee-validate": "^2.2.0",
+        "vue-i18n": "^8.10.0",
         "vue-meta": "^1.6.0",
         "vue-router": "^3.0.2",
         "vuetify": "^1.5.9",
