--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# VUE APP
+VA_CLIENT_ID=2
+VA_CLIENT_SECRET=vNbfIGv2dLZlwsd7tDc9HmNHnCmrBDBVFTKZuETx
+
+MIX_CLIENT_ID="${VA_CLIENT_ID}"
+MIX_CLIENT_SECRET="${VA_CLIENT_SECRET}"
