--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
     "doctrine/dbal": "^2.9",
     "fideloper/proxy": "^4.0",
     "guzzlehttp/guzzle": "^6.3",
-    "herode/arepository": "*@dev",
     "laravel/framework": "5.8.*",
     "laravel/passport": "^7.2",
     "laravel/tinker": "^1.0",
@@ -35,12 +34,19 @@
   },
   "extra": {
     "laravel": {
-      "dont-discover": []
+      "dont-discover": [],
+      "providers": [
+        "Herode\\ARepo\\ARepoServiceProvider"
+      ],
+      "aliases": {
+        "ARepo": "Herode\\ARepo\\ARepo"
+      }
     }
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Herode\\ARepo\\": "modules/arepository/src/"
     },
     "classmap": [
       "database/seeds",
@@ -73,11 +79,5 @@
     "lint": [
       "phpcs --standard=ruleset.xml"
     ]
-  },
-  "repositories": [
-    {
-      "type": "path",
-      "url": "./modules/arepository"
-    }
-  ]
+  }
 }
